Implementacion en una tabla web

--- a/LiebreTortuga/LiebreTortuga/LiebreTortuga.csproj
+++ b/LiebreTortuga/LiebreTortuga/LiebreTortuga.csproj
@@ -199,6 +199,7 @@
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Home\Fabula.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
